fixing collapse body style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@
 .collapse-content-button-text a {
   color: #ffab40;
   margin-left: 24px;
+
 }
 
 .collapse-content-button-text {
@@ -46,6 +47,7 @@
 }
 
 .collapsible-body {
+    border-top: 0;
     padding: 0px;
 }
 
@@ -103,7 +105,7 @@
 }
 
 .helper-flex-collapse {
-    padding-left: 1.5rem;
+    padding-top: 16px;
     display: flex;
     justify-content: flex-end;
 }
@@ -139,3 +141,10 @@
     background-color: #fff;
     border-bottom: 1px solid #ddd;
 }
+
+
+.collapsible-header .active {
+    background-color: red;
+    border-bottom: 0;
+}
+  
